# airjedi-app

./: .mcp.json  Cargo.toml
.playwright-mcp/: page-2026-05-03T18-35-07-459Z.yml
airjedi-fusion/: Cargo.toml
airjedi-fusion/src/: classification.rs  config.rs  coord.rs  lib.rs  prelude_imports.rs  sensor.rs  store.rs  systems.rs  track.rs  types.rs
airjedi-fusion/src/associator/: gnn.rs  mod.rs  spatial_index.rs
airjedi-fusion/src/filter/: ekf.rs  mod.rs  oosm.rs
airjedi-fusion/src/transport/: messages.rs  mod.rs  nats.rs
airjedi-fusion/tests/: dil_resilience.rs  integration.rs
assets/models/b737/: b737.glb
docs/plans/: 2026-02-26-dual-camera-architecture-design.md  2026-02-26-dual-camera-architecture.md  2026-02-26-parallel-worktree-skill-design.md  2026-02-26-parallel-worktree-skill.md  2026-02-26-tile-flashing-fix-design.md  2026-02-26-tile-flashing-fix.md  2026-02-28-chase-camera-design.md  2026-02-28-chase-camera.md  2026-02-28-path-management-design.md  2026-02-28-path-management.md  2026-03-03-data-ingest-settings-ui-design.md  2026-03-03-data-ingest-settings-ui.md  2026-03-05-faa-airspace-3d-visualization-design.md  2026-03-05-faa-airspace-3d-visualization.md
docs/superpowers/plans/: 2026-05-18-aircraft-interpolation.md  (+3 more)
macos/: Makefile
macos/assets/: tiles
macos/scripts/: build-app.sh
src/: build_info.rs  camera.rs  config.rs  debug_3d_hud.rs  debug_panel.rs  dock.rs  geo.rs  hud.rs  input.rs  inspector.rs  keyboard.rs  main.rs  paths.rs  render_layers.rs  statusbar.rs  theme.rs  tile_cache.rs  tiles.rs  toolbar.rs  tools_window.rs  ui_panels.rs  zoom.rs
src/adsb/: connection.rs  mod.rs  sync.rs
src/aircraft/: altitude.rs  components.rs  emergency.rs  hanabi_trails.rs  interpolation.rs  list_panel.rs  mesh_trails.rs  mod.rs  picking.rs  plugin.rs  prediction.rs  stats_panel.rs  trail_renderer.rs  trails.rs  typeinfo.rs  typeloader.rs
src/airspace/: mod.rs
src/aviation/: airports.rs  loader.rs  mod.rs  navaids.rs  plugin.rs  runways.rs  types.rs
src/bookmarks/: mod.rs
src/coverage/: mod.rs
src/data/: downloader.rs
src/data_ingest/: fixture_tests.rs  http_cache.rs  mod.rs  pipeline.rs  provider.rs  scheduler.rs
src/data_sources/: mod.rs
src/export/: mod.rs
src/fusion_integration/: adsb_adapter.rs  estimated_track.rs  fusion_ui.rs  interpolation.rs  landing_detection.rs  mod.rs  render_bridge.rs  uncertainty_viz.rs
src/recording/: mod.rs  player.rs  recorder.rs
src/terrain/: heightmap.rs  mesh.rs  mod.rs
src/tools/: measurement.rs  mod.rs
src/view3d/: mod.rs  sky.rs
src/weather/: metar.rs  mod.rs
src/widgets/: card.rs  data_strip.rs  effects.rs  gauge.rs  mod.rs
(+10 files in other folders)
