[package]
name = "airjedi-fusion"
version = "0.1.0"
edition = "2021"
description = "Multi-sensor fusion engine for target tracking"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[features]
default = []
nats = ["dep:async-nats", "dep:crossbeam-channel", "dep:tokio", "dep:bincode", "dep:futures"]

[dependencies]
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_time = "0.18"
bevy_reflect = "0.18"
bevy_log = "0.18"
nalgebra = "0.33"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Optional NATS transport dependencies
async-nats = { version = "0.38", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }
bincode = { version = "1.3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"
